--- a/home/content/docs/operation/configuration.mdx
+++ b/home/content/docs/operation/configuration.mdx
@@ -413,6 +413,15 @@ The client secret for the Keycloak OAuth2 application.
 
 The issuer/discovery URL for the Keycloak realm (e.g. https://auth.example.com/realms/YourRealm).
 
+### `TRAYA_API_SERVER_URL`
+
+<table>
+<tr><td>type</td><td>url (e.g. http://example.com)</td></tr>
+<tr><td>default</td><td>none</td></tr>
+</table>
+
+The base URL for the Traya API server. Used for authenticating users via Traya tokens and fetching user information.
+
 ## SMS
 
 SMS sending configuration. This must be enabled in order to support SMS-based authentication.
