Add moengage client and post like notifications

--- a/home/content/docs/operation/configuration.mdx
+++ b/home/content/docs/operation/configuration.mdx
@@ -277,6 +277,28 @@ The API key for the SendGrid account. This is required for sending emails via Se
 
 This is typically a long string of characters that you can generate in the SendGrid dashboard.
 
+## MoEngage
+
+MoEngage event sending configuration. When unset, MoEngage event sending is disabled.
+
+### `MOENGAGE_APP_KEY`
+
+<table>
+<tr><td>type</td><td>`string`</td></tr>
+<tr><td>default</td><td>none</td></tr>
+</table>
+
+The MoEngage app key used to identify your MoEngage application.
+
+### `MOENGAGE_AUTH_KEY`
+
+<table>
+<tr><td>type</td><td>`string`</td></tr>
+<tr><td>default</td><td>none</td></tr>
+</table>
+
+The MoEngage auth key used to authenticate API requests.
+
 ## Authentication
 
 Authentication providers configuration. These are all optional, you can choose to enable any combination of them to allow members of your community to sign up and sign in using a third party provider.
